fixed whitespace hack for breadcrumb and button group

--- a/src/less/breadcrumb.less
+++ b/src/less/breadcrumb.less
@@ -30,7 +30,7 @@
     padding: 0;
     list-style: none;
     /* 2 */
-    font-size: 0;
+    font-size: 0.01px;
     .hook-breadcrumb;
 }
 
@@ -42,7 +42,10 @@
  * Reset whitespace hack
  */
 
-.uk-breadcrumb > li { font-size: 1rem; } 
+.uk-breadcrumb > li {
+    font-size: 1rem;
+    vertical-align: top;
+} 
 
 .uk-breadcrumb > li,
 .uk-breadcrumb > li > a,
